<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_all"
    android:orientation="vertical">

    <include layout="@layout/cart_bar" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <android.support.v7.widget.RecyclerView
                android:id="@+id/cart_recommand"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_below="@+id/view"
                android:layout_weight="1" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/all_checkbox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:button="@drawable/checkbox_shop"
                    android:checkMark="?android:attr/listChoiceIndicatorMultiple"
                    android:gravity="center"
                    android:text="全选"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textSize="15sp" />

                <LinearLayout
                    android:id="@+id/ll_info"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:visibility="visible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:gravity="right"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:text="合计:"
                                android:textSize="13sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/tv_total_price"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="￥0.00"
                                android:textColor="@color/normal_btn"
                                android:textSize="13sp"
                                android:textStyle="bold" />
                        </LinearLayout>

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="不含运费"
                            android:textSize="10sp"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tv_go_to_pay"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="2"
                        android:background="@color/normal_btn"
                        android:clickable="true"
                        android:gravity="center"
                        android:text="结算(0)"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_shar"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="4"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="right"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/ll_share"
                            android:layout_width="60dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/bg_time"
                            android:text="@string/share"
                            android:textSize="14sp" />

                        <Button
                            android:id="@+id/ll_save"
                            android:layout_width="60dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/bg_time"
                            android:text="@string/collection"
                            android:textSize="14sp" />

                        <Button
                            android:id="@+id/ll_delete"
                            android:layout_width="60dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_vertical"
                            android:layout_marginRight="5dp"
                            android:background="@drawable/bg_time"
                            android:text="@string/delete"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </FrameLayout>


</LinearLayout>